--- a/it-news/index.html
+++ b/it-news/index.html
@@ -57,6 +57,7 @@
         import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-auth.js";
         import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-database.js";
 
+        // 뉴스트래커 전용 설정값
         const firebaseConfig = {
             apiKey: "AIzaSyAd08tVXgWZ2_dg3jzvhawmH4jtolRmfhY",
             authDomain: "itnews-82b60.firebaseapp.com",
@@ -109,7 +110,44 @@
             set(ref(db, `users/${currentUserId}/newsSettings`), cleanState);
         }
 
-        // --- 내보내기/가져오기 기능 ---
+        // --- 가져오기 로직 수정: 이전 버전 파일도 호환 가능하도록 ---
+        window.handleNewsImport = (event) => {
+            const file = event.target.files[0];
+            if (!file) return;
+            const reader = new FileReader();
+            reader.onload = (e) => {
+                try {
+                    const imported = JSON.parse(e.target.result);
+                    if (confirm("기존 뉴스 설정을 덮어쓰시겠습니까?")) {
+                        // 기존 백업 파일({data: state})과 새 파일(state) 형식을 모두 처리
+                        if (imported.data && imported.data.categories) {
+                            state = imported.data;
+                        } else if (imported.categories) {
+                            state = imported;
+                        } else {
+                            throw new Error("올바른 백업 파일 형식이 아닙니다.");
+                        }
+
+                        // 데이터 정규화
+                        state.categories.forEach(c => {
+                            if (!c.keywords) c.keywords = [];
+                            c.keywords.forEach(k => {
+                                if (!k.news) k.news = null;
+                                if (!k.allNews) k.allNews = [];
+                            });
+                        });
+
+                        saveCloudData();
+                        alert("뉴스 설정 복원 성공!");
+                    }
+                } catch (err) { 
+                    alert("가져오기 실패: " + err.message); 
+                }
+            };
+            reader.readAsText(file);
+            event.target.value = ''; // 같은 파일 재선택 가능하도록
+        };
+
         window.exportNewsToJSON = () => {
             const blob = new Blob([JSON.stringify(state, null, 2)], { type: 'application/json' });
             const a = document.createElement('a');
@@ -119,23 +157,6 @@
         };
 
         window.triggerNewsImport = () => document.getElementById('importNewsFile').click();
-
-        window.handleNewsImport = (event) => {
-            const file = event.target.files[0];
-            if (!file) return;
-            const reader = new FileReader();
-            reader.onload = (e) => {
-                try {
-                    const imported = JSON.parse(e.target.result);
-                    if (confirm("기존 뉴스 설정을 덮어쓰시겠습니까?")) {
-                        state = imported;
-                        saveCloudData();
-                        alert("뉴스 설정 복원 성공!");
-                    }
-                } catch (err) { alert("잘못된 파일 형식입니다."); }
-            };
-            reader.readAsText(file);
-        };
 
         const categoriesContainer = document.getElementById('categories-container');
         const generateId = () => `id_${Date.now()}_${Math.random().toString(36).substring(2, 9)}`;
@@ -160,7 +181,7 @@
                                 <div class="border rounded-lg p-4 bg-gray-50 flex flex-col justify-between">
                                     <div>
                                         <div class="flex justify-between mb-2"><span class="font-bold">${k.name}</span><button onclick="deleteKeyword('${category.id}', '${k.id}')" class="text-gray-300">×</button></div>
-                                        <div class="text-sm space-y-2">${k.loading ? '<div class="loader mx-auto"></div>' : (k.newsHtml || '불러오는 중...')}</div>
+                                        <div id="news-${k.id}" class="text-sm space-y-2">${k.loading ? '<div class="loader mx-auto"></div>' : (k.newsHtml || '불러오는 중...')}</div>
                                     </div>
                                     <button onclick="fetchRSS('${category.id}', '${k.id}')" class="mt-4 text-indigo-600 text-xs font-bold">↻ 새로고침</button>
                                 </div>`).join('')}
@@ -177,7 +198,8 @@
             const k = cat.keywords.find(k => k.id === keyId);
             k.loading = true; renderDashboard();
             try {
-                const res = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent('https://news.google.com/rss/search?q='+encodeURIComponent(k.name)+'&hl=ko&gl=KR&ceid=KR:ko')}`);
+                const rssUrl = `https://news.google.com/rss/search?q=${encodeURIComponent(k.name)}&hl=ko&gl=KR&ceid=KR:ko`;
+                const res = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssUrl)}`);
                 const data = await res.json();
                 if (data.status === 'ok') {
                     k.newsHtml = data.items.slice(0, 3).map(i => `<a href="${i.link}" target="_blank" class="block hover:underline text-indigo-700 truncate">• ${i.title}</a>`).join('');
