--- a/tracker/index.html
+++ b/tracker/index.html
@@ -76,7 +76,7 @@
     <div class="top-nav">
         <h1 style="margin:0; font-size:1.5rem; font-weight:900;">📊 IT 뉴스 인사이트 트래커</h1>
         <div style="display:flex; gap:8px; flex-wrap: wrap;">
-            <button class="tab" style="background:#fff; border:1px solid #ddd; border-radius:6px;" onclick="location.href='https://1sangit.github.io/sbl-toolkit/index.html'">🏠 홈으로</button>
+            <button class="btn-home" style="background:#fff; border:1px solid #ddd; border-radius:6px; padding:0.5rem 1rem; cursor:pointer; font-weight:800;" onclick="location.href='https://1sangit.github.io/sbl-toolkit/index.html'">🏠 홈으로</button>
             <button class="tab" style="background:var(--primary); color:white; border-radius:6px;" onclick="exportData()">💾 내보내기</button>
             <button class="tab" style="background:var(--primary); color:white; border-radius:6px;" onclick="triggerImport()">📥 가져오기</button>
         </div>
